--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,3 +6,39 @@
 
 
 */
+
+/* Root styles */
+:root {
+  --bg-pale-navy: #36384D;
+  --dark-navy: #242742;
+  --grey-25: rgba(25, 24, 43, 0.25);
+  --grey-50: rgba(25, 24, 43, 0.5);
+  --alert-orange: #FF6155;
+  --alert-bg-orange: rgba(255, 97, 85, 0.15);
+  --white: #fff;
+  --btn-gradient: linear-gradient(225deg, #FF6A3A 0%, #FF527B 100%);
+}
+html {
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+}
+p,
+button {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+btn-primary:hover {
+  background: var(--btn-gradient);
+  box-shadow: 0px 16px 32px 0px rgba(255, 97, 85, 0.50);
+}
